--- a/src/pages/om_os.astro
+++ b/src/pages/om_os.astro
@@ -3,7 +3,7 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Button from "../components/Button.astro";
 import { Image } from "astro:assets";
 import beer_about from "../assets/images/beer_about.svg";
-import aboutUsImage from "./public/about_us.svg";
+import aboutUsImage from "./public/about_us.png";
 import boks from "../assets/images/boks.png";
 import Link from "../components/Link.astro";
 import insta1 from "../assets/images/insta1.svg";
@@ -15,13 +15,13 @@ import insta6 from "../assets/images/insta6.svg";
 ---
 
 <MainLayout title="Maltclub">
-  <section class="relative bg-cover lg:h-screen lg:top-[-4.5rem] lg:right-[7rem]" style="background-image: url('/about_us.png'); z-0">
-    <div class="absolute inset-0 z-10 flex items-center justify-center lg:pb-80">
-      <div class="text-white space-y-4">
-        <h1 class="text-5xl text-blue-500">MALTCLUB</h1>
-        <h2 class="text-8xl text-blue-500">HVEM ER VI?</h2>
-        <p class="text-blue-500 lg:w-2/3">Uanset om du er nybegynder eller ølentusiast, sørger Maltclub for at overraske og forkæle dine smagsløg.</p>
-        <div class="relative z-20 lg:pt-7">
+  <section class="pb-20 lg:relative lg:bg-cover lg:h-screen lg:top-[-4.5rem]" style="background-image: url('/about_us.svg');  z-0">
+    <div class="lg:absolute inset-0 z-10 lg:flex lg:items-center lg:justify-center">
+      <div class="text-white space-y-4 lg:pb-28">
+        <h1 class="lg:text-5xl text-medium text-blue-500 px-4 pt-4">MALTCLUB</h1>
+        <h2 class="lg:text-8xl text-blue-500 text-medium px-4">HVEM ER VI?</h2>
+        <p class="text-blue-500 lg:w-2/3 px-4">Uanset om du er nybegynder eller ølentusiast, sørger Maltclub for at overraske og forkæle dine smagsløg.</p>
+        <div class="lg:relative lg:z-20 lg:pt-7 pt-7 px-4">
           <Button variant="primary" size="medium" href="#omos">LÆS MERE</Button>
         </div>
       </div>
