--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -13,7 +13,7 @@ const sizeClasses = {
 };
 ---
 
-<a href={href} class:list={[variantClasses[variant], sizeClasses[size]]} target={target}>
+<a href={href} class:list={[variantClasses[variant], sizeClasses[size]]}>
   <slot />
 </a>
 
