--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ import logo from "../assets/images/logo.png";
 </section>
 
 <div x-data="{ showmenu: false }" class="lg:static">
-  <div id="navbar" class="flex flex-row justify-between px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto pt-6">
+  <div id="navbar" class="flex flex-row justify-between px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto pt-6 relative z-20">
     <div id="logo" class="relative z-20 hover:opacity-75 w-12 max-w-full">
       <a href="/">
         <Image src={logo} alt="billede" />
