--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -33,7 +33,7 @@ import Button from "../components/Button.astro";
     </div>
 
     <div class="flex justify-center pt-4">
-      <Button variant="primary" size="medium" href="/your-link">KØB ABONNEMENT</Button>
+      <Button variant="primary" size="medium" href="/registering">KØB ABONNEMENT</Button>
     </div>
   </div>
 </article>
