--- a/src/pages/om_os.astro
+++ b/src/pages/om_os.astro
@@ -29,7 +29,7 @@ import insta6 from "../assets/images/insta6.svg";
   </section>
 
   <div class="bg-rosa-500" id="omos">
-    <section class="px-4 lg:h-screen lg:flex lg:place-items-center lg:justify-center fotoinview">
+    <section class="px-4 lg:h-screen lg:flex lg:place-items-center lg:justify-center">
       <div class="md:grid md:grid-cols-[auto_auto] md:place-content-center md:max-w-screen-lg md:px-6 md:gap-10 md:w-full md:h-screen lg:grid lg:grid-cols-[auto_auto] lg:place-content-center lg:max-w-screen-xl lg:gap-20 lg:w-full">
         <div class="w-40 md:w-60 tpt-10 lg:w-96">
           <Image src={beer_about} alt="Billede af øl" />
@@ -46,7 +46,7 @@ import insta6 from "../assets/images/insta6.svg";
     <section class="px-4 pt-10 pb-28 sm:px-4 md:px-6 md:h-auto lg:pb-28 max-w-screen-xl mx-auto">
       <div class="flex justify-center flex-col items-center pb-8">
         <h3 class="font-bold">FØLG OS PÅ INSTAGRAM</h3>
-        <Link><a class="hover:text-orange-500" href="https://www.instagram.com/maltclub.dk/">@maltclub.dk </a></Link>
+        <Link><a class="hover:text-orange-500" href="https://www.instagram.com/maltclub.dk/">@maltclub.dk</a></Link>
       </div>
       <div class="w-32 md:w-56 gap-7 flex justify-center mx-auto lg:gap-8 lg:w-72">
         <Image src={insta1} alt="" class="" />
@@ -61,7 +61,11 @@ import insta6 from "../assets/images/insta6.svg";
     </section>
   </div>
 </MainLayout>
-
+<style>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
 <script>
   import { animate, stagger, inView, scroll, timeline } from "motion";
   inView(".fotoinview", () => {
