--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -7,7 +7,7 @@ const variantClasses = {
 };
 
 const sizeClasses = {
-  large: "px-44 py-2 text-base",
+  large: "w-full px-30 text-center py-2 text-sm md:text-base md:py-3 md:px-32",
   medium: "px-4 py-4 text-xs",
   small: "px-2 py-0.5 text-xxs",
 };
