--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,34 +62,35 @@ import bg3 from "../assets/images/bg3.svg";
       </div>
 
       <div class="bg-rosa-500 w-96 h-80 lg:pt-4 rounded flex justify-center items-center">
-        <Image src={boks} alt="billede" class="w-80 transform transition duration-300 ease-in-out hover:scale-150" />
+        <a href="/abonnement"> <Image src={boks} alt="billede" class="w-80 custom-pulse" /></a>
       </div>
     </div>
   </section>
 
-  <section class="relative lg:min-h-screen flex flex-wrap overflow-hidden">
-    <!-- Baggrundsbillede -->
-    <div class="absolute z-1 w-full h-full">
-      <Image src={bg2} alt="Baggrund" class="w-full h-full object-cover" />
+  <section class="relative min-h-full md:min-h-screen flex flex-wrap overflow-hidden">
+    <!-- Baggrund -->
+    <div class="absolute z-1 inset-0 object-cover">
+      <Image src={bg2} alt="Baggrund" class="w-full h-full object-cover object-center" />
     </div>
 
-    <!-- Vores billeder og tekst -->
-    <div class="relative z-20 flex w-full items-end px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-      <div class="container lg:container box-border w-full h-[80vh] mx-auto flex justify-center items-center flex-wrap">
+    <!-- Indhold -->
+    <div class="relative z-20 flex w-full md:items-end px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
+      <div class="container box-border items-center md:w-full md:h-[80vh] mx-auto flex justify-center lg:items-center md:flex-wrap">
         <!-- Billede og GIF -->
-        <div class="sm:w-[41%] box-border relative pl-10">
-          <div class="flex place-content-end pt-8">
-            <Image src={beerglass1} alt="øl" class="w-96 h-auto" />
-          </div>
-          <div class="absolute lg:top-[48%] lg:right-[18%] lg:transform -translate-x-1/2 z-20 max-w-[250%] mix-blend-soft-light">
-            <Image src={gif} alt="GIF" class="w-8 h-auto" />
+        <div class="w-[41%] box-border relative md:pl-10">
+          <!-- Beerglass -->
+          <div class="relative flex place-content-end pt-8">
+            <Image src={beerglass1} alt="øl" class="w-56 md:w-96 h-auto md:pl-10" />
+            <div class="absolute right-[21%] top-[69%] sm:top-[66%] sm:right-[20%] md:top-[69%] md:right-[19%] lg:top-[64%] lg:right-[18%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
+              <Image src={gif} alt="GIF" class="w-6 sm:w-6 md:w-7 lg:w-8 h-auto" />
+            </div>
           </div>
         </div>
 
         <!-- Tekst -->
-        <div class="w-[41%] pt-14">
+        <div class="w-[41%] pt-28 md:pt-14">
           <h3 class="font-bold">Smag vores Nyhed!</h3>
-          <p class="w-2/3">Vores yngste medlem. En alkoholfri tørslukker med dybde og lækre toner af skovbær. Nyd den kold - skål</p>
+          <p class="md:w-2/3">Vores yngste medlem. En alkoholfri tørslukker med dybde og lækre toner af skovbær. Nyd den kold - skål!</p>
         </div>
       </div>
     </div>
@@ -104,26 +105,26 @@ import bg3 from "../assets/images/bg3.svg";
       </div>
     </div>
 
-    <div class="grid grid-cols-[auto_auto] grid-rows-4 place-content-center">
-      <div class="pt-28 pl-16col-start-1 row-start-1 fotoinview">
+    <div class="mx-auto max-w-sm place-content-center md:grid md:grid-cols-[auto_auto] md:grid-rows-4">
+      <div class="pt-28 md:pl-16 md:col-start-1 md:row-start-1 fotoinview">
         <Image src={info1} alt="billede" class="w-60" />
         <h3 class="text-xl font-bold text-blue-500 pt-4">BESTIL DIT MALTCLUB ØL ABONNMENT</h3>
         <p class="text-blue-500 w-96 pt-2">Vælg hvilket øl abonnement du ønsker at modtage. Få leveret et lækkert udvalg af kvalitetsøl fra danske og udenlandske bryggerier direkte hjem til dig eller din nærmeste pakkeshop.</p>
       </div>
 
-      <div class="pt-10 pl-16 col-start-2 row-start-2 inview">
+      <div class="pt-10 md:pl-16 md:col-start-2 md:row-start-2 inview">
         <Image src={info2} alt="billede" class="w-60" />
         <h3 class="text-xl font-bold text-blue-500 pt-4">NYD DINE ØL I GODT SELVSKAB</h3>
         <p class="text-blue-500 w-96 pt-2">Inviter gode venner eller familie på besøg og byd på lækre specialøl. Med et MaltClub øl abonnement er du sikker på at kunne byde på gode øl til enhver lejlighed - med mindre du selvfølgelig har nået at drikke dine øl inden du får gæster på besøg.</p>
       </div>
 
-      <div class="pt-10 pl-16 col-start-1 row-start-3 fotoinview">
+      <div class="pt-10 md:pl-16 md:col-start-1 md:row-start-3 fotoinview3">
         <Image src={info3} alt="billede" class="w-24" />
         <h3 class="text-xl font-bold text-blue-500 pt-4">UNIKKE OG SMAGSVÆKKENDE</h3>
         <p class="text-blue-500 w-96 pt-2">MaltClub giver dig en kulinarisk smagsoplevelse med et udvalg af unikke specialøl. Samtidig sparer du tid og får adgang til varianter, som du måske aldrig ville opdage i dit lokale supermarked.</p>
       </div>
 
-      <div class="pt-10 pl-16 col-start-2 row-start-4 inview">
+      <div class="pt-10 md:pl-16 md:col-start-2 md:row-start-4 inview4">
         <Image src={info4} alt="billede" class="w-36" />
         <h3 class="text-xl font-bold text-blue-500 pt-4">SPAR TID OG PENGE</h3>
         <p class="text-blue-500 w-96 pt-2">Hos MaltClub kombinerer vi smag og værdi, så du kan nyde unikke øl af høj kvalitet til billigere penge - uden at bruge tid på at lede efter dem.</p>
@@ -152,36 +153,37 @@ import bg3 from "../assets/images/bg3.svg";
     </div>
   </section>
 
-  <section class="relative w-full min-h-full md:min-h-screen flex flex-wrap overflow-hidden">
+  <section class="relative min-h-full md:min-h-screen flex flex-wrap overflow-hidden">
     <!-- Baggrund -->
     <div class="absolute z-1 inset-0 object-cover">
-      <Image src={bg3} alt="Baggrund" class="w-full h-full object-cover object-left" />
+      <Image src={bg3} alt="Baggrund" class="w-full h-full object-cover object-center" />
     </div>
 
     <!-- Indhold -->
-    <div class="relative z-20 flex w-full lg:items-end px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
-      <div class="container box-border flex-col items-center md:w-full md:h-[80vh] mx-auto flex lg:justify-center lg:items-center lg:flex-wrap">
+    <div class="relative z-20 flex w-full md:items-end px-4 sm:px-4 md:px-6 lg:px-2 max-w-screen-xl mx-auto">
+      <div class="container box-border items-center md:w-full md:h-[80vh] mx-auto flex justify-center lg:items-center md:flex-wrap">
         <!-- Billede og GIF -->
         <div class="w-[41%] box-border relative md:pl-10">
           <!-- Beerglass -->
-          <div class="relative flex lg:place-content-end pt-8">
-            <Image src={beerglass2} alt="øl" class="w-36 lg:w-96 h-auto" />
-            <div class="absolute right-[25%] top-[69%] sm:top-[50%] sm:right-[10%] md:top-[60%] lg:top-[65%] lg:right-[19%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
-              <Image src={gif} alt="GIF" class="w-3 sm:w-5 md:w-6 lg:w-8 h-auto" />
+          <div class="relative flex place-content-end pt-8">
+            <Image src={beerglass2} alt="øl" class="w-60 md:w-96 h-auto" />
+            <div class="absolute right-[21%] top-[69%] sm:top-[69%] sm:right-[20%] md:top-[69%] md:right-[21%] lg:top-[65%] lg:right-[19%] transform -translate-x-1/2 -translate-y-1/2 z-10 mix-blend-soft-light">
+              <Image src={gif} alt="GIF" class="w-6 sm:w-6 md:w-7 lg:w-8 h-auto" />
             </div>
           </div>
         </div>
 
         <!-- Tekst -->
-        <div class="flex flex-col mx-auto text-left items-start md:pt-14 lg:w-[41%]">
+        <div class="w-[41%] pt-28 md:pt-14">
           <h3 class="font-bold">GOLDEN TASTE</h3>
-          <p class="w-full">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
+          <p class="md:sw-2/3">Golden Taste er en perfekt afbalanceret øl, der kombinerer gyldne maltnoter med en frisk, frugtagtig aroma. En elegant smagsoplevelse, der forkæler dine sanser ved hver tår.</p>
         </div>
       </div>
     </div>
   </section>
-  <section class="pt-48">
-    <Image src={car} alt="Baggrund" class="w-52 pt-36 lg:w-auto fotoinview" />
+
+  <section class="pt-20">
+    <Image src={car} alt="Baggrund" class="w-52 pt-36 lg:w-auto bilinview" />
 
     <div class="bg-rosa-500 py-32 pl-4">
       <h2 class="text-blue-500 text-large lg:flex lg:justify-center">VI LEVERER DIN ORDRE</h2>
@@ -204,15 +206,14 @@ import bg3 from "../assets/images/bg3.svg";
       <Button variant="secondary" size="medium" href="/your-link">TILMELD</Button>
     </form>
   </section>
-
-  <section class="lg:px-2 max-w-screen-xl mx-auto pb-36 pl-4">
+  <section id="bestseller" class="lg:px-2 max-w-screen-xl mx-auto pb-36 pl-4 transform rotate-50 transition-all duration-700">
     <h2 class="text-large pt-36 pb-14">BESTSELLER</h2>
     <div class="lg:flex lg:justify-center">
-      <Image src={sweetoliven} alt="Baggrund" class="w-36 rotate-12 lg:w-56" />
+      <Image src={sweetoliven} alt="Baggrund" class="w-36 rotate-50 lg:w-56" id="fotobes" />
       <div class="pt-10 lg:w-2/4 lg:pt-72 lg:pl-32">
         <h2 class="text-medium">SWEET OLIVE</h2>
         <p>Nyd vores organiske bestseller - en harmonisk balance af friske noter og uventede smagsnuancer - en ægte smagsoplevelse i hvert glas.</p>
-        <p>Denne bestseller er altid med i vores abonnementer, så ligegyldigt hvilken pakke du køber vil du altid kunne nyde denne lækre øl.</p>
+        <p>Denne bestseller er altid med i vores abonnementer, så ligegyldigt hvilken pakke du køber, vil du altid kunne nyde denne lækre øl.</p>
       </div>
     </div>
   </section>
@@ -281,15 +282,65 @@ import bg3 from "../assets/images/bg3.svg";
 <script>
   /* Import af Motion One biblioteket */
   import { animate, stagger, inView, scroll, timeline } from "motion";
+  let hasAnimated1 = false;
+  let hasAnimated2 = false;
+  let hasAnimated3 = false;
+  let hasAnimated4 = false;
+
   inView(".fotoinview", () => {
-    animate(".fotoinview", { x: [-2000, 0] }, { duration: 2 });
+    if (!hasAnimated1) {
+      animate(".fotoinview", { x: [-2000, 0] }, { duration: 2, delay: 0.2 });
+      hasAnimated1 = true;
+    }
   });
+
   inView(".inview", () => {
-    animate(".inview", { x: [2000, 0] }, { duration: 3 });
+    if (!hasAnimated2) {
+      animate(".inview", { x: [2000, 0] }, { duration: 3, delay: 0.4 });
+      hasAnimated2 = true;
+    }
   });
+
+  inView(".inview4", () => {
+    if (!hasAnimated3) {
+      animate(".inview4", { x: [2000, 0] }, { duration: 3, delay: 0.6 });
+      hasAnimated3 = true;
+    }
+  });
+
+  inView(".fotoinview3", () => {
+    if (!hasAnimated4) {
+      animate(".fotoinview3", { x: [-2000, 0] }, { duration: 3, delay: 0.8 });
+      hasAnimated4 = true;
+    }
+  });
+
+  inView(".bilinview", () => {
+    animate(".bilinview", { x: [-2000, 0] }, { duration: 3 });
+  });
+
   inView(".inview2", () => {
     animate(".inview2", { y: [-2000, 0] }, { duration: 3 });
   });
 
   animate("body", { opacity: [0, 1] }, { duration: 1 });
+
+  const observer = new IntersectionObserver(
+    (entries) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("animate");
+        }
+      });
+    },
+    {
+      threshold: 0.6,
+    }
+  );
+
+  const bestsellerSection = document.getElementById("bestseller");
+  const fotobesImage = document.getElementById("fotobes");
+
+  observer.observe(bestsellerSection);
+  observer.observe(fotobesImage);
 </script>
