--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -3,7 +3,7 @@ const { variant = "primary", size = "medium", href = "#", target = "_self" } = A
 
 const variantClasses = {
   primary: " font-bold cursor-pointer text-grey-500 shadow-drop25 bg-blue-500 hover:bg-blue-400 rounded",
-  secondary: "font-bold cursor-pointer border-2 border-orange-500 text-orange-500  shadow-drop25 hover:border-blue-500 rounded hover:text-blue-500",
+  secondary: "font-bold cursor-pointer border-2 border-orange-500 text-orange-500  shadow-drop25 hover:border-grey-500 rounded hover:text-grey-500",
 };
 
 const sizeClasses = {
